syntax = "proto3";

package api;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/jonh-dev/partus_users/api";

enum AccountStatus {
  ACTIVE = 0;
  INACTIVE = 1;
  PENDING = 2;
  SUSPENDED = 3;
}

message PersonalInfo {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  google.protobuf.Timestamp birthDate = 4;
  string phone = 5;
}

message AccountInfo {
  string username = 1;
  string password = 2;
  AccountStatus accountStatus = 3;
  string statusReason = 4;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp updatedAt = 6;
  google.protobuf.Timestamp lastLogin = 7;
  int32 failedLoginAttempts = 8;
  google.protobuf.Timestamp lastFailedLogin = 9;
  string lastFailedLoginReason = 10;
  google.protobuf.Timestamp accountLockedUntil = 11;
  string accountLockedReason = 12;
}

message User {
  string id = 1;
  PersonalInfo personalInfo = 2;
  AccountInfo accountInfo = 3;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (UserResponse);
  rpc HandleFailedLogin(HandleFailedLoginRequest) returns (UserResponse);
}

message CreateUserRequest {
  PersonalInfo personalInfo = 1;
  AccountInfo accountInfo = 2;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message HandleFailedLoginRequest {
  string username = 1;
  string reason = 2;
}

message UserResponse {
  User user = 1;
  string message = 2;
}
