package services

import (
	"testing"
	"time"

	"github.com/jonh-dev/partus_users/api"
	"google.golang.org/protobuf/types/known/timestamppb"
)

func TestUserValidation(t *testing.T) {
	tests := []UserTest{
		{
			name: "Invalid First Name - Lowercase",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "joão",
					LastName:  "Silva",
					Email:     "joao.lowercase@example.com",
					BirthDate: timestamppb.New(time.Date(2000, 8, 10, 0, 0, 0, 0, time.UTC)),
					Phone:     "(41) 99999-9999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "joao.valid",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: o primeiro nome deve começar com uma letra maiúscula, conter apenas uma palavra e ter no máximo 20 caracteres",
		},
		{
			name: "Invalid First Name - Multiple Words",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "João Carlos",
					LastName:  "Silva",
					Email:     "joao.carlos@example.com",
					BirthDate: timestamppb.New(time.Date(2000, 8, 10, 0, 0, 0, 0, time.UTC)),
					Phone:     "(41) 99999-9999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "joao.valid",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: o primeiro nome deve começar com uma letra maiúscula, conter apenas uma palavra e ter no máximo 20 caracteres",
		},
		{
			name: "Invalid First Name - Contains Numbers",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "João1",
					LastName:  "Silva",
					Email:     "joao.numbers@example.com",
					BirthDate: timestamppb.New(time.Date(2000, 8, 10, 0, 0, 0, 0, time.UTC)),
					Phone:     "(41) 99999-9999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "joao.valid",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: o primeiro nome deve começar com uma letra maiúscula, conter apenas uma palavra e ter no máximo 20 caracteres",
		},
		{
			name: "Invalid First Name - Too Long",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "Joãooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo",
					LastName:  "Silva",
					Email:     "joao.long@example.com",
					BirthDate: timestamppb.New(time.Date(2000, 8, 10, 0, 0, 0, 0, time.UTC)),
					Phone:     "(41) 99999-9999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "joao.valid",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: o primeiro nome deve começar com uma letra maiúscula, conter apenas uma palavra e ter no máximo 20 caracteres",
		},
		{
			name: "Invalid Last Name - Lowercase",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "João",
					LastName:  "silva",
					Email:     "joao.lowercase@example.com",
					BirthDate: timestamppb.New(time.Date(2000, 8, 10, 0, 0, 0, 0, time.UTC)),
					Phone:     "(41) 99999-9999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "joao.valid",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: o sobrenome deve começar com uma letra maiúscula em cada palavra e ter no máximo 50 caracteres",
		},
		{
			name: "Invalid Last Name - Contains Numbers",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "João",
					LastName:  "Silva1",
					Email:     "joao.numbers@example.com",
					BirthDate: timestamppb.New(time.Date(2000, 8, 10, 0, 0, 0, 0, time.UTC)),
					Phone:     "(41) 99999-9999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "joao.valid",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: o sobrenome deve começar com uma letra maiúscula em cada palavra e ter no máximo 50 caracteres",
		},
		{
			name: "Invalid Last Name - Too Long",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "João",
					LastName:  "Silvaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
					Email:     "joao.long@example.com",
					BirthDate: timestamppb.New(time.Date(2000, 8, 10, 0, 0, 0, 0, time.UTC)),
					Phone:     "(41) 99999-9999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "joao.valid",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: o sobrenome deve começar com uma letra maiúscula em cada palavra e ter no máximo 50 caracteres",
		},
		{
			name: "Invalid Email - Missing @",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "João",
					LastName:  "Silva",
					Email:     "joao.missingatexample.com",
					BirthDate: timestamppb.New(time.Date(2000, 8, 10, 0, 0, 0, 0, time.UTC)),
					Phone:     "(41) 99999-9999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "joao.valid",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: o e-mail deve ser um endereço de e-mail válido",
		},
		{
			name: "Invalid Email - Missing Domain",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "João",
					LastName:  "Silva",
					Email:     "joao.missingdomain@",
					BirthDate: timestamppb.New(time.Date(2000, 8, 10, 0, 0, 0, 0, time.UTC)),
					Phone:     "(41) 99999-9999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "joao.valid",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: o e-mail deve ser um endereço de e-mail válido",
		},
		{
			name: "Invalid Email - Missing Username",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "João",
					LastName:  "Silva",
					Email:     "@example.com",
					BirthDate: timestamppb.New(time.Date(2000, 8, 10, 0, 0, 0, 0, time.UTC)),
					Phone:     "(41) 99999-9999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "joao.valid",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: o e-mail deve ser um endereço de e-mail válido",
		},
		{
			name: "Invalid Email - Missing Username and Domain",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "João",
					LastName:  "Silva",
					Email:     "@",
					BirthDate: timestamppb.New(time.Date(2000, 8, 10, 0, 0, 0, 0, time.UTC)),
					Phone:     "(41) 99999-9999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "joao.valid",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: o e-mail deve ser um endereço de e-mail válido",
		},
		{
			name: "Invalid Birth Date - Future Date",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "João",
					LastName:  "Silva",
					Email:     "joao.future@example.com",
					BirthDate: timestamppb.New(time.Now().AddDate(0, 0, 1)),
					Phone:     "(41) 99999-9999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "joao.valid",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: a data de nascimento deve estar no passado, o usuário deve ter pelo menos 13 anos e o ano deve ser entre 1900 e o ano atual",
		},
		{
			name: "Invalid Birth Date - User Too Young",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "João",
					LastName:  "Silva",
					Email:     "joao.young@example.com",
					BirthDate: timestamppb.New(time.Now().AddDate(-12, 0, 0)),
					Phone:     "(41) 99999-9999",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: a data de nascimento deve estar no passado, o usuário deve ter pelo menos 13 anos e o ano deve ser entre 1900 e o ano atual",
		},
		{
			name: "Invalid Phone - Missing Area Code",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "João",
					LastName:  "Silva",
					Email:     "joao.invalid@example.com",
					BirthDate: timestamppb.New(time.Date(2000, 8, 10, 0, 0, 0, 0, time.UTC)),
					Phone:     "99999-9999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "joao.valid",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: o telefone ou celular deve estar no formato correto, ou seja, começar com '+' seguido de 1 a 3 dígitos para números internacionais, ou começar diretamente com um dígito para números brasileiros, e ter entre 9 e 14 dígitos no total, sem conter nenhum caractere que não seja dígito ou '+'",
		},
		{
			name: "Invalid Phone - Wrong Format",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "João",
					LastName:  "Silva",
					Email:     "joao.invalid@example.com",
					BirthDate: timestamppb.New(time.Date(2000, 8, 10, 0, 0, 0, 0, time.UTC)),
					Phone:     "(41) 99999 9999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "joao.valid",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: o telefone ou celular deve estar no formato correto, ou seja, começar com '+' seguido de 1 a 3 dígitos para números internacionais, ou começar diretamente com um dígito para números brasileiros, e ter entre 9 e 14 dígitos no total, sem conter nenhum caractere que não seja dígito ou '+'",
		},
		{
			name: "Invalid Phone - Too Short - Brazilian Number",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "João",
					LastName:  "Carlos",
					Email:     "joao.to.short@example.com",
					BirthDate: timestamppb.New(time.Date(2000, 8, 10, 0, 0, 0, 0, time.UTC)),
					Phone:     "999-999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "joao.valid",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: o telefone ou celular deve estar no formato correto, ou seja, começar com '+' seguido de 1 a 3 dígitos para números internacionais, ou começar diretamente com um dígito para números brasileiros, e ter entre 9 e 14 dígitos no total, sem conter nenhum caractere que não seja dígito ou '+'",
		},
		{
			name: "Invalid Phone - Too Long - Brazilian Number",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "João",
					LastName:  "Carlos",
					Email:     "joao.to.long@example.com",
					BirthDate: timestamppb.New(time.Date(2000, 8, 10, 0, 0, 0, 0, time.UTC)),
					Phone:     "999999999999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "joao.valid",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: o telefone ou celular deve estar no formato correto, ou seja, começar com '+' seguido de 1 a 3 dígitos para números internacionais, ou começar diretamente com um dígito para números brasileiros, e ter entre 9 e 14 dígitos no total, sem conter nenhum caractere que não seja dígito ou '+'",
		},
		{
			name: "Invalid Username - Too Short",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "João",
					LastName:  "Carlos",
					Email:     "joao.username.to.short@example.com",
					BirthDate: timestamppb.New(time.Date(2000, 8, 10, 0, 0, 0, 0, time.UTC)),
					Phone:     "+5541999999999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "jo",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: o nome de usuário deve começar e terminar com um caractere alfanumérico, pode conter letras, números, pontos, hifens e sublinhados, não pode conter caracteres especiais consecutivos, e deve ter entre 3 e 20 caracteres",
		},
		{
			name: "Invalid Username - Too Long",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "João",
					LastName:  "Carlos",
					Email:     "joao.carlos.to.long@example.com",
					BirthDate: timestamppb.New(time.Date(2000, 8, 10, 0, 0, 0, 0, time.UTC)),
					Phone:     "+5541999999999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "joaoooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: o nome de usuário deve começar e terminar com um caractere alfanumérico, pode conter letras, números, pontos, hifens e sublinhados, não pode conter caracteres especiais consecutivos, e deve ter entre 3 e 20 caracteres",
		},
		{
			name: "Invalid Username - Special Characters",
			request: &api.CreateUserRequest{
				PersonalInfo: &api.PersonalInfo{
					FirstName: "João",
					LastName:  "Carlos",
					Email:     "joao.carlos.special.char@example.com",
					BirthDate: timestamppb.New(time.Date(2000, 8, 10, 0, 0, 0, 0, time.UTC)),
					Phone:     "+5541999999999",
				},
				AccountInfo: &api.AccountInfo{
					Username:              "joao.carlos.@#$%&*()_+",
					Password:              "123456",
					AccountStatus:         api.AccountStatus_ACTIVE,
					StatusReason:          "",
					CreatedAt:             timestamppb.Now(),
					UpdatedAt:             timestamppb.Now(),
					LastLogin:             timestamppb.Now(),
					FailedLoginAttempts:   0,
					LastFailedLogin:       timestamppb.Now(),
					LastFailedLoginReason: "",
					AccountLockedUntil:    timestamppb.Now(),
					AccountLockedReason:   "",
				},
			},
			wantErr:       true,
			expectedError: "Erro na validação do usuário: o nome de usuário deve começar e terminar com um caractere alfanumérico, pode conter letras, números, pontos, hifens e sublinhados, não pode conter caracteres especiais consecutivos, e deve ter entre 3 e 20 caracteres",
		},

		// Outros casos de teste para validação do usuário aqui
	}

	for _, tt := range tests {
		tt.RunTest(t)
	}
}
